テストコードをCコードに移行。

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,18 @@
 *~
 *.o
-tmp*
+*.s
+*.exe
 a.out
 9cc
-#*~
 *.json
-foo/foo.c
 a.out
 gccsample
-test/*
+gcc_test
+gcc_test/*
+test/*.exe
+test/*.s
+test2
+
+
+
+
